--- a/index.html
+++ b/index.html
@@ -158,17 +158,17 @@
 <!-- MAIN PAGE -->
 <div id="main">
 
-<h1>Happy Birthday, My Love 🎉💖</h1>
+<h1>Happy 19th Birthday, My Love!!! 🎉💖</h1>
 
 <p>
-    To the most amazing person in my world — I made this little site just for you.<br><br>
-    Thank you for filling my life with happiness, warmth, and love.<br>
+    To my beautiful girl<br><br>
+    Thank you for filling my life with happiness, warmth, and love. Im so incredbly greatful to have you in my life<br>
     I hope today makes you feel as special as you make me feel every single day. 💕
 </p>
 
 <a class="btn" href="#photos">See cute memories 📸</a>
 
-<h2 id="photos">Our Memories</h2>
+<h2 id="photos">Us because we are 2 cats</h2>
 
 <div class="gallery">
     <img src="photo1.jpg">
